--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
     <!-- 加载spring容器，注意还需要加载mybatis给spring -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring/spring-*.xml,classpath:mybatis/mybatis-*.xml</param-value>
+        <param-value>classpath*:spring/spring-*.xml,classpath:mybatis/mybatis-*.xml</param-value>
     </context-param>
     <!-- spring加载前端控制器 -->
     <!-- 如果是用mvn命令生成的xml，需要修改servlet版本为3.1 -->
@@ -20,7 +20,7 @@
         <!-- 加载spring容器监听器 -->
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:spring/spring-*.xml</param-value>
+            <param-value>classpath*:spring/spring-*.xml</param-value>
         </init-param>
     </servlet>
     <!-- url模式 -->
